# contractops

./: .gitignore  README.md  contractops.yaml  pyproject.toml
.github/: action.yml
.github/workflows/: ci.yml  pages.yml
benchmarks/: RESULTS.md  content_results.json  results.json  run_benchmarks.py
benchmarks/scenarios/: data_deletion.json  escalation_angry.json  financial_advice.json  hipaa_compliance.json  medical_diagnosis.json  password_reset.json  pii_gdpr.json  prompt_injection.json  refund_request.json  security_mfa_bypass.json
contractops/: __init__.py  adapters.py  assertions.py  audit.py  auth.py  baseline.py  cli.py  config.py  dashboard.py  embeddings.py  executors.py  github.py  lifecycle.py  models.py  notifications.py  policy_code.py  policy_packs.py  registry.py  report.py  scenario.py  storage.py  suite.py
docs/: CNAME  index.html  main.js  market_gap.md  product_plan.md  styles.css  system_design.md
docs/assets/brand-kit/: BRANDKIT.md  contractops-brand-tokens.json
examples/: customer_refund.json  escalation_routing.json  hipaa_data_request.json  pii_handling.json  security_access_exception.json
tests/: conftest.py  test_adapters.py  test_assertions.py  test_audit.py  test_auth.py  test_baseline.py  test_cli.py  test_config.py  test_dashboard.py  test_embeddings.py  test_executors.py  test_lifecycle.py  test_models.py  test_notifications.py  test_phase0_assertions.py  test_phase0_stability.py  test_policy_code.py  test_policy_packs.py  test_registry.py  test_report.py  test_scenario.py  test_storage.py  test_suite.py
